tests/pass/konfirma_pass.kl
fn inisiu() {
    konfirma(sin);
    konfirma(1 == 1);
    konfirma(!nau);
}
