tests/fail/fail_reserved_function_name_keyword.kl
fn si() vaziu {
}

fn inisiu() {
}
